# devbox

./: Cargo.toml  LICENSE  README.md  package.json  safedev-product-shape.md
docs/: publishing.md
docs/assets/: generate_safedev_diagrams.py
packaging/homebrew/: safedev.rb.template
src/: main.rs
test/: e2e.test.js  real-lima.test.js
