[package]
name = "safedev"
version = "0.1.0"
edition = "2021"
description = "Run repos and Codex inside isolated per-project dev boxes."
readme = "README.md"
repository = "https://github.com/sendaifun/devbox"
license = "MIT"
keywords = ["sandbox", "devbox", "lima", "codex", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
crossterm = "0.28"
ratatui = "0.29"

[profile.release]
strip = true
lto = true
codegen-units = 1
